--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start:prod": "env-cmd -e production node ./bin/www"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "env-cmd": "^10.1.0",
     "express": "~4.16.1",
+    "helmet": "^4.1.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "node-cmd": "^3.0.0",
