--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start:dev": "env-cmd -e development node ./bin/www",
     "start:test": "env-cmd -e test node ./bin/www",
-    "start:prod": "env-cmd -e production node ./bin/www"
+    "start:prod": "env-cmd -e production node ./bin/www",
+    "test": "mocha"
   },
   "dependencies": {
     "compression": "^1.7.4",
@@ -19,5 +20,9 @@
     "morgan": "~1.10.0",
     "node-cmd": "^3.0.0",
     "pug": "^3.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^8.1.3",
+    "supertest": "^5.0.0"
   }
 }
